--- a/index.css
+++ b/index.css
@@ -1,6 +1,13 @@
-*{
-    font-family: 'Bahnschrift';
+@font-face {
+    font-family: DIN;
+    src: url("fonts/DIN\ Bold.otf") format("opentype")
 }
+
+*{
+    font-family: 'DIN';
+}
+
+
 body{
     width:100%;
     height:100%;
@@ -44,6 +51,19 @@ body{
     border-width: 10px;
 }
 
+.bg1 {
+    background-image: url("/bgs/background02.png");
+}
+.bg2 {
+    background-image: url("/bgs/background03.png");
+}
+.bg3 {
+    background-image: url("/bgs/background04.png");
+}
+.bg4 {
+    background-image: url("/bgs/background01.png");
+}
+
 .panel {
     position:fixed;
     background-color: rgba(128, 128, 128, 0.5);
@@ -58,10 +78,14 @@ body{
 .panelContent {
     width:100%;
     height:100%;
-    display: flex;
-    flex-direction: column;
     opacity: 1;
     transition-duration: 0.1s;
+}
+#c1 {
+    width:100%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
 }
 .panelContentTransitioning {
     opacity: 0;
@@ -108,7 +132,7 @@ button {
     padding-left: 2vh;
 }
 
-.selected {
+button:hover {
     background-image: linear-gradient(to right,rgba(255, 166, 0, 0),rgba(255, 166, 0, 1) 20%,rgba(255, 166, 0, 0));
 }
 
@@ -120,7 +144,6 @@ header {
     color:orange;
     font-size: 4vh;
     line-height: 4vh;
-    font-weight: bolder;
     transform: translate(0, -100%);
       text-shadow:
     3px 3px 0 #000,
@@ -156,4 +179,13 @@ header {
 .panelAnimate {
     animation: panelTransitionEnd 200ms;
     animation-timing-function: cubic-bezier();
+}
+
+.freeman {
+    position:fixed;
+    height:90%;
+    bottom:0;
+    left:5%;
+    filter: blur(1px);
+    visibility: hidden;
 }
