--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body{
 }
 
 .backdropbackground{
-    background-image: url("./bgs/background02.png");
+    background-color: #000;
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
@@ -42,13 +42,37 @@ body{
     margin:0;
     padding:0;
     border:none;
-    background-image: url("./bgs/background02.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: center;
     background-position-y: 0%;
     border: solid;
     border-width: 10px;
+}
+
+.backgroundnew {
+    z-index: 1;
+    width:100%;
+    height:100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: 0%;
+    margin:0;
+    padding:0;
+    border:none;
+    opacity:0;
+    transition-duration: 1s;
+    object-fit:cover;
+}
+
+.transitioning {
+    opacity:1;
+    transition-duration: 1s;
 }
 
 .bg1 {
@@ -64,6 +88,42 @@ body{
     background-image: url("./bgs/background01.png");
 }
 
+.navButtons {
+    position:fixed;
+    width:fit-content;
+    height:fit-content;
+    padding:2vh;
+    padding-left: 5%;
+    border-radius: 1.54vh;
+    transition-duration: 0.4s;
+    transition-timing-function:linear;
+    z-index: 2;
+    right: 50%;
+    bottom:-3%;
+    height:12.5%;
+    width:72.5%;
+    transform: translate(50%, 0);
+    background-image: linear-gradient(to right,rgba(128, 128, 128, 0),rgba(128, 128, 128, 0.5) 70%,rgba(128, 128, 128, 0.5));
+    direction:rtl;
+}
+
+.navButton {
+    height:20%;
+    background: none;
+    text-align: center;
+    color:white;
+    font-size: 4vh;
+    line-height: 4vh;
+    vertical-align: middle;
+      text-shadow:
+    3px 3px 0 #000,
+    -3px 3px 0 #000,
+    -3px -3px 0 #000,
+    3px -3px 0 #000;
+    border:none;
+    padding-left: 2vh;
+}
+
 .panel {
     position:fixed;
     background-color: rgba(128, 128, 128, 0.5);
@@ -74,6 +134,7 @@ body{
     border-radius: 1.54vh;
     transition-duration: 0.4s;
     transition-timing-function:linear;
+    z-index: 2;
 }
 .panelContent {
     width:100%;
@@ -101,14 +162,17 @@ body{
 }
 
 .rightAlign {
-    right: 28%;
+    right: 10.75%;
     top:40%;
-    transform: translate(50%, -50%);
+    transform: translate(0, -50%);
+}
+.centerLargeAlign {
+    right: 10.75%;
+    transform: translate(50%, 0);
 }
 .centerAlign {
-    right: 50%;
     top:50%;
-    transform: translate(50%, -50%);
+    transform: translate(0, -50%);
 }
 .smallMenu {
     width:30%;
@@ -118,10 +182,10 @@ body{
     width:72.5%;
 }
 .tallMenu {
-    height:60%;
+    height:40%;
 }
 
-button {
+.menubutton {
     height:20%;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -140,7 +204,7 @@ button {
     padding-left: 2vh;
 }
 
-button:hover {
+.menubutton:hover {
     background-image: linear-gradient(to right,rgba(255, 166, 0, 0),rgba(255, 166, 0, 1) 20%,rgba(255, 166, 0, 0));
 }
 
@@ -196,4 +260,76 @@ header {
     left:5%;
     filter: blur(1px);
     visibility: hidden;
+}
+
+.portDownloads {
+    width:80%;
+    height:65%;
+    position:absolute;
+    bottom:10%;
+    left:50%;
+    transform: translate(-50%, 0);
+    white-space: nowrap;
+}
+
+.filetodownload {
+    position: absolute;
+    color:white;
+    font-size: 4vh;
+    line-height: 4vh;
+    top:0%;
+    left:50%;
+    transform: translate(-50%, 0);
+}
+
+.Arrow {
+    background:none;
+    border:none;
+    height: 85%;
+    bottom:0%;
+    position:absolute;
+    width:7%
+}
+.Arrow img {
+    width:100%;
+}
+.left {
+    left:1%;
+}
+.right{
+    right:1%;
+}
+
+.downloadLink {
+    position:relative;
+    width:32%;
+    height:100%;
+    border:none;
+    background-color: rgba(128, 128, 128, 0.5);
+    border-radius: 5%;
+    margin-right: 1.5%;
+}
+
+.downloadLink:hover {
+    background-color: rgba(4, 105, 0, 0.63);
+}
+
+.downloadLink p {
+    position: absolute;
+    color:white;
+    font-size: 3vh;
+    line-height: 3vh;
+    text-align: left;
+    height:3vh;
+    top:0%;
+    left:5%;
+    transform: translate(0, -50%);
+}
+
+.downloadLink img{
+    aspect-ratio: 4/3;
+    position: absolute;
+    width:90%;
+    left:5%;
+    bottom:7%;
 }
