--- a/index.css
+++ b/index.css
@@ -168,11 +168,13 @@ body{
 }
 .centerLargeAlign {
     right: 10.75%;
-    transform: translate(50%, 0);
-}
-.centerAlign {
     top:50%;
     transform: translate(0, -50%);
+}
+.centerSmallAlign {
+    right:50%;
+    top:50%;
+    transform: translate(50%, -50%);
 }
 .smallMenu {
     width:30%;
@@ -186,6 +188,7 @@ body{
 }
 
 .menubutton {
+    position:relative;
     height:20%;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -203,9 +206,24 @@ body{
     border:none;
     padding-left: 2vh;
 }
+.selector {
+    position:absolute;
+    left:-15%;
+    top:50%;
+    transform: translate(0, -50%);
+    height:115%;
+}
+
+.menubutton img {
+    opacity:0;
+}
 
 .menubutton:hover {
     background-image: linear-gradient(to right,rgba(255, 166, 0, 0),rgba(255, 166, 0, 1) 20%,rgba(255, 166, 0, 0));
+}
+
+.menubutton:hover img {
+    opacity:1;
 }
 
 header {
