--- a/index.css
+++ b/index.css
@@ -32,7 +32,9 @@ body{
 
 .container {
     background-color: black;
+    width:100%;
     aspect-ratio: 4/3;
+    width:auto;
     max-width: 100%;
     height: 100vh;
     position: fixed;
