--- a/index.css
+++ b/index.css
@@ -90,45 +90,6 @@ body{
     background-image: url("./bgs/background01.png");
 }
 
-.navButtons {
-    position:fixed;
-    width:fit-content;
-    height:fit-content;
-    padding:2vh;
-    padding-left: 5%;
-    border-radius: 1.54vh;
-    transition-duration: 0.4s;
-    transition-timing-function:linear;
-    z-index: 2;
-    right: 50%;
-    bottom:-3%;
-    height:12.5%;
-    width:72.5%;
-    transform: translate(50%, 0);
-    background-image: linear-gradient(to right,rgba(128, 128, 128, 0),rgba(128, 128, 128, 0.5) 70%,rgba(128, 128, 128, 0.5));
-    direction:rtl;
-}
-
-.navButton {
-    height:20%;
-    background: none;
-    text-align: center;
-    color:white;
-    font-size: 4vh;
-    line-height: 4vh;
-    vertical-align: middle;
-      text-shadow:
-    3px 3px 0 #000,
-    -3px 3px 0 #000,
-    -3px -3px 0 #000,
-    3px -3px 0 #000;
-    border:none;
-    padding-left: 2vh;
-}
-.navButton:hover {
-    color:orange;
-}
-
 .panel {
     position:fixed;
     background-color: rgba(128, 128, 128, 0.5);
@@ -157,6 +118,7 @@ body{
 }
 
 .invisible {
+    opacity:0;
     visibility: hidden !important;
     position:fixed;
 }
@@ -191,6 +153,9 @@ body{
 .tallMenu {
     height:40%;
 }
+.tallerMenu {
+    height:55%;
+}
 
 .menubutton {
     position:relative;
@@ -210,6 +175,7 @@ body{
     3px -3px 0 #000;
     border:none;
     padding-left: 2vh;
+    cursor: pointer;
 }
 .selector {
     position:absolute;
@@ -296,6 +262,15 @@ header {
     overflow: hidden;
 }
 
+.switcher {
+    width:100%;
+    height:100%;
+    position:absolute;
+    left:0%;
+    bottom:0%;
+    transition-duration: 0.5s;
+}
+
 .scroller {
     width:100%;
     height:100%;
@@ -303,6 +278,12 @@ header {
     left:0%;
     bottom:0%;
     transition-duration: 0.5s;
+    scroll-behavior: auto;
+    display:flex;
+    flex-wrap: wrap;
+    overflow: scroll;
+    scroll-behavior: auto;
+    scrollbar-width: thin;
 }
 
 .filetodownload {
@@ -353,13 +334,15 @@ header {
 }
 
 .downloadLink {
+    cursor: pointer;
     position:relative;
     width:32%;
-    height:100%;
+    height:28vh;
     border:none;
     background-color: rgba(128, 128, 128, 0.5);
     border-radius: 5%;
     margin-right: 1%;
+    margin-bottom: 1vh;
 }
 
 .downloadLink:hover {
@@ -384,4 +367,157 @@ header {
     width:90%;
     left:5%;
     bottom:7%;
+}
+
+.navButtons {
+    position:fixed;
+    width:fit-content;
+    height:fit-content;
+    padding:2vh;
+    padding-left: 5%;
+    border-radius: 1.54vh;
+    transition-duration: 0.4s;
+    transition-timing-function:linear;
+    z-index: 2;
+    right: 50%;
+    bottom:-3%;
+    height:12.5%;
+    width:72.5%;
+    transform: translate(50%, 0);
+    background-image: linear-gradient(to right,rgba(128, 128, 128, 0),rgba(128, 128, 128, 0.5) 70%,rgba(128, 128, 128, 0.5));
+    display: flex;
+    gap:1vh;
+    direction:rtl;
+}
+
+.navButton {
+    cursor: pointer;
+    height:35%;
+    background: none;
+    text-align: center;
+    color:white;
+    font-size: 4vh;
+    line-height: 4vh;
+    vertical-align: middle;
+      text-shadow:
+    3px 3px 0 #000,
+    -3px 3px 0 #000,
+    -3px -3px 0 #000,
+    3px -3px 0 #000;
+    border:none;
+    padding-left: 2vh;
+}
+.navButton:hover {
+    color:orange;
+}
+
+.toggleLayout {
+    cursor: pointer;
+    direction:ltr;
+    display: flex;
+    gap:1vh;
+    position: relative;
+    height:35%;
+    width:45vh;
+}
+
+.toggleLayout button {
+    aspect-ratio: 1;
+    height: 100%;
+    width: auto;
+    border-color: orange;
+    border-style: solid;
+    border-width: 0.5vh;
+    font-size: 3vh;
+    line-height: 0vh;
+    background-color: white;
+    color:white;
+}
+.toggled button {
+    color:orange
+}
+.toggleLayout:hover button {
+    border-color: rgb(167, 108, 0);
+}
+
+.toggled:hover button {
+    color: rgb(167, 108, 0);
+}
+
+.toggleLayout p {
+    user-select: none;
+    width:100%;
+    height:100%;
+    background: none;
+    text-align: center;
+    color:white;
+    font-size: 4vh;
+    line-height: 5vh;
+    vertical-align: middle;
+    text-align: left;
+      text-shadow:
+    3px 3px 0 #000,
+    -3px 3px 0 #000,
+    -3px -3px 0 #000,
+    3px -3px 0 #000;
+    border:none;
+    padding-left: 0.5vh;
+    transform: translate(0, -100%);
+}
+.toggleLayout:hover p {
+    color:orange;
+}
+
+#c5 p {
+    width:100%;
+    height:100%;
+    background: none;
+    text-align: center;
+    color:white;
+    font-size: 4vh;
+    line-height: 5vh;
+    vertical-align: middle;
+    text-align: left;
+      text-shadow:
+    3px 3px 0 #000,
+    -3px 3px 0 #000,
+    -3px -3px 0 #000,
+    3px -3px 0 #000;
+    border:none;
+}
+
+#c4 p {
+    width:100%;
+    height:100%;
+    background: none;
+    text-align: center;
+    color:white;
+    font-size: 4vh;
+    line-height: 5vh;
+    vertical-align: middle;
+    text-align: left;
+      text-shadow:
+    3px 3px 0 #000,
+    -3px 3px 0 #000,
+    -3px -3px 0 #000,
+    3px -3px 0 #000;
+    border:none;
+}
+
+.tabSelector {
+    position:absolute;
+    right:0;
+    top:-1vh;
+    transform: translate(0, -100%);
+}
+.tabSelector button {
+    background-color: rgba(128, 128, 128, 0.5);
+    border-style: solid;
+    border-color: rgba(255, 166, 0, 0);
+    border-width: 0.5vh;
+    font-size: 3vh;
+    color:white;
+}
+.tabSelector button:hover {
+    border-color: orange;
 }
